--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            Now We  are a  sofisticated pan
-        </title>
-    </head>
-    <body>
-        <p>
-            There are many people who are very enged at timeline 
-        </p>
-        <p>
-            Hurrah now I can download my any file
-        </p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>High School</title>
+</head>
+<body>
+    <div class="Anav">
+        <h2 class="headinng">
+            Mohammad Zahid Hasan
+        </h2>
+    </div>
+</body>
 </html>
