--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High School</title>
 </head>
+
 <body>
     <div class="Anav">
         <h2 class="headinng">
             Mohammad Zahid Hasan
         </h2>
+        <h2 class="headinng">
+            Mohammad Zahid Hasan
+        </h2>
     </div>
 </body>
+
 </html>
