--- a/html1/index.html
+++ b/html1/index.html
@@ -14,11 +14,7 @@
 </head>
 
 <body>
-    <a href="index.zip">Download</a>
-    <br><br><br>
-    <video width="100%" height="100%" controls>
-        <source src="https://youtu.be/JVGJgqeH8U4" type="video/mp4">
-    </video>
+    <h1><a href="index.zip">Download</a></h1>
 </body>
 
 </html>
